# binpacking

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure_cmake.sh  index.html  linux-aarch64.cmake  run_tests.sh  script.js
.github/workflows/: binpacking.yml  cmake.yml
binpacking-visualization/: README.md  components.d.ts  index.html  package-lock.json  package.json
binpacking-visualization/src/: App.vue  main.ts
include/: bfdh.h  containers.h  ffdh.h  mergesort.h  nfdh.h  rustapi.h  wfdh.h
src/: bfdh.c  containers.c  ffdh.c  main.c  mergesort.c  nfdh.c  wfdh.c
